tests/examples/good/garbage_collector/good015.lat
int main() {
    A a = new A;
    a.f();
    (new A).f();
    return 0;
}

class A {
    int a;
    string s;
    void f() {
        s = "hello good015 ";
        s = s + s;
        s = s + s + s;
        printString(s);
    }
}