tests/examples/bad/class_member_method_invalid_args.lat
int main() {
    A a;
    a.f(true);

    return 1;
}
 
class A {
    int a;
    int f(int a) {return 1;}
}

